# line-supervision-frontend

./: .dockerignore  .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .postcssrc.js  CHANGELOG.md  Dockerfile  README.md  babel.config.js  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  docker-run.sh  package.json  quasar.conf.js  renovate.json  traefik.toml
api-service/: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile
api-service/.devcontainer/: .editorconfig  Dockerfile  devcontainer.json
api-service/src/: config.rs  handlers.rs  main.rs  ui_customization.rs
api-service/src/chart_data/: machine_state.rs  machines_state.flux  mod.rs  production.flux  production.rs
api-service/src/influxdb/: client.rs  flux_query.rs  mod.rs
api-service/src/snapshots/: api_service__ui_customization__tests__convert_snapshot.snap  api_service__ui_customization__tests__ui_customization_snapshot-2.snap  api_service__ui_customization__tests__ui_customization_snapshot.snap
api-service/ui_data/: customization.toml
ui-config/: .editorconfig  .gitignore  Cargo.toml  Dockerfile  config.toml  docker-entrypoint.sh  docker-healthcheck.sh
ui-config/.devcontainer/: devcontainer.json
ui-config/config_data/: config.toml
ui-config/src/: config.rs  handlers.rs  lib.rs  main.rs  test.toml  ui_config.rs  ui_customization.rs
ui-config/src/chart_data/: flux_query.rs  machine_state.rs  machines_state.flux  mod.rs  production.flux  production.rs
ui-config/src/influxdb/: client.rs  flux_query.rs
web/: .env  (+10 more)
(+131 files in other folders)
