[package]
name = "api_service"
version = "0.1.0"
authors = [ "Arnaud Rocher <arnaud.roche3@gmail.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
async-std = { version = "1.9.0", features = [ "attributes" ] }
async-trait = "0.1.51"
csv-async = "1.2.1"
dotenv = "0.15.0"
envconfig = "0.10.0"
futures = "0.3.16"
regex = "1.5.4"
serde = { version = "1.0.126", features = [ "derive" ] }
serde_json = "1.0.59"
surf = "2.2.0"
tide = "0.16.0"
toml = "0.5.8"
url = "2.2.2"

[dependencies.chrono]
version = "0.4.19"
default-features = false
features = [ "std", "serde" ]

[dev-dependencies]
assert_matches = "1.5.0"
indoc = "1.0.3"
insta = "1.7.1"
test-case = "1.2.0"
