[package]
name = "api_service"
version = "0.1.0"
authors = [ "Arnaud Rocher <arnaud.roche3@gmail.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"
anyhow = "1.0.41"
env_logger = "0.8.4"
log = "0.4.14"
regex = "1.5.4"
serde_json = "1.0.59"
toml = "0.5.8"

[dev-dependencies]
insta = "1.7.1"
